--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
   <title>ボードゲーム愛好会 ボドゲ部（公認）</title>
 
   <!-- ページの説明 -->
-  <meta name="description" content="青山学院大学の公認サークル、ボードゲーム愛好会ボドゲ部の公式ホームページです。週3回、月、金、土曜日に、17号館にて活動しています。" />
+  <meta name="description" content="青山学院大学の公認サークル、ボードゲーム愛好会[ボドゲ部]の公式ホームページです。ボードゲームを中心にTRPG、人狼、カードゲーム、マーダーミステリー、TVゲームなど色々なゲームを遊んでいます。" />
 
   <!-- 文字エンコードの指定 -->
   <meta charset="utf-8" />
@@ -145,7 +145,7 @@
             <big><b><i><a href="slogan.html" style="text-decoration:none;"><font color="white">今月の標語</br>「さむい朝から　電車に揺られ</br>時間が来るまで　重ゲやる」</font></a></i></b></big>
 
             <div class="description2"><big>&nbsp;重役出勤をしないボドゲ部員の冬の土曜日。（応募された中から選ばれた標語）</big></div></div>
-            </br></br></br>
+            </br></br></br></br>
 <a href="https://store.line.me/stickershop/product/17669666/ja"><img src="https://media.discordapp.net/attachments/840252564242956298/920254540081684520/25697896-97ED-4A51-9A0F-09B7673DA448_4_5005_c.jpeg" alt="ツイッター" width="390" height="75"></a>
             </div></br></br>
 
