--- a/home.html
+++ b/home.html
@@ -145,9 +145,9 @@
             <big><b><i><a href="slogan.html" style="text-decoration:none;"><font color="white">今月の標語</br>「さむい朝から　電車に揺られ</br>時間が来るまで　重ゲやる」</font></a></i></b></big>
 
             <div class="description2"><big>&nbsp;重役出勤をしないボドゲ部員の冬の土曜日。（応募された中から選ばれた標語）</big></div></div>
-            </br></br></br></br>
-<a href="https://store.line.me/stickershop/product/17669666/ja"><img src="https://media.discordapp.net/attachments/840252564242956298/920258876929085480/34F53336-CD82-4D4E-B6D9-87D3D8E89EA9_4_5005_c.jpeg" alt="LINEスタンプ広告" width="300" height="60"></a>
-            </div></br></br>
+            </br></br></br></br></br>
+<a href="https://store.line.me/stickershop/product/17669666/ja"><img src="https://media.discordapp.net/attachments/840252564242956298/920258876929085480/34F53336-CD82-4D4E-B6D9-87D3D8E89EA9_4_5005_c.jpeg" alt="LINEスタンプ広告" width="370" height="60"></a>
+            </div></br>
 
         
             </div>  
