--- a/aboutus.html
+++ b/aboutus.html
@@ -58,7 +58,7 @@
            
           <div class="face-photo">
 
-        <img src="https://media.discordapp.net/attachments/840252564242956298/920245264776847400/unknown.png" alt="アイコン" width="230" height="230"class="layer-img"></div>
+        <img src="https://media.discordapp.net/attachments/840252564242956298/920564682354487306/0EC26C07-F05D-4EED-95C7-5BE5D4946651.jpg" alt="アイコン" width="230" height="230"class="layer-img"></div>
 
          <div class="profile7">
             <big><b>代表</b>
