--- a/aboutus.html
+++ b/aboutus.html
@@ -100,7 +100,7 @@
                <a href="https://twitter.com/ra_mlot"><small>@ra_mlot</small></a>
             
             <br/>
-            2002年1月、降誕した。現在神奈川県町田市在住。最近はドミニオンとTRPGと筋トレに脳みそを支配されている。そのためまれに街中へドミニオンをやりに行き、サークル実施日でも失踪することがある。2021年ボードゲーム愛好会【お嬢様杯】優勝者。このサークルを青ドミにすることを企てている。</big>
+            2002年1月、降誕した。現在神奈川県町田市在住。最近はドミニオンとTRPGと筋トレに脳みそを支配されている。そのためまれに街中へドミニオンをやりに行き、サークル実施日でも失踪することがある。2021年ボードゲーム愛好会【お嬢様杯】優勝者。このサークルを青ドミにすることを企てている。小学生のような性格で皆から愛されている。</big>
           </div></div>         
   
            
