--- a/about.html
+++ b/about.html
@@ -58,7 +58,9 @@
         ・<a href="https://homepagenopro.com/html/css_popup.html" ><font color="white">Cssだけで実装!画像をクリックしてポップアップ表示する方法</font></a></br>
         </div>
 
+<div class="heading"><i>　出目良郎　利用規約　　</i></div>
 
+<img src="https://media.discordapp.net/attachments/860169910273179668/920711951871524874/2021-12-16_1.20.25.png" alt="ロゴ" width="500" height="400">
           
       </div>
 </body>
