--- a/aboutus.html
+++ b/aboutus.html
@@ -116,7 +116,7 @@
              <a href="https://twitter.com/hksb_bdgb"><small>@hksb_bdgb</small></a>
             
             <br/>
-            20??年、夏休み真っ只中生まれ。さがキャン支部設立に大きく貢献したボドゲ部員の鑑。支部が設立した後も部員勧誘を頑張っておりボドゲ部員の鑑と噂されている。部内大会ではゲームの種類を問わず事前の練習や研究を怠らず、毎度好成績を残していくボドゲ部員の鑑。プライベートでは密かにボードゲームを値切って購入していたりと、ボドゲ部員の鑑な一面もある。TRPGでカッコつけようとしてファンブルするのが得意。人懐っこい性格とギャグセンの高さで皆から愛されている。</big>
+            2001年、夏休み真っ只中生まれ。さがキャン支部設立に大きく貢献したボドゲ部員の鑑。支部が設立した後も部員勧誘を頑張っておりボドゲ部員の鑑と噂されている。部内大会ではゲームの種類を問わず事前の練習や研究を怠らず、毎度好成績を残していくボドゲ部員の鑑。プライベートでは密かにボードゲームを値切って購入していたりと、ボドゲ部員の鑑な一面もある。TRPGでカッコつけようとしてファンブルするのが得意。ギャグセンスの高さと人懐っこい性格で皆から愛されている。</big>
           </div>
           </div>
          
