--- a/slogan.html
+++ b/slogan.html
@@ -57,6 +57,14 @@
 
          <div class="profile">
     
+            <!-- コピペここから -->
+            <div class="tooltip2">
+                <p><big><b>12月　「さむい朝から　電車に揺られ　時間が来るまで　重ゲやる」　　　　　</b></big></p>
+            <div class="description2"><big>　重役出勤をしないボドゲ部員の冬の土曜日。 </big></div></div>
+
+            </br></br></br>
+            <!-- コピペここまで -->
+             
             <div class="tooltip2">
                 <p><big><b>11月　「プレイを憎んで人を憎まず」　　　　　</b></big></p>
             <div class="description2"><big>　私は許せないよ。山賊で白金貨落とされたら。 </big></div></div>
