--- a/home.html
+++ b/home.html
@@ -144,7 +144,7 @@
                 
             <big><b><i><a href="slogan.html" style="text-decoration:none;"><font color="white">今月の標語</br>「さむい朝から　電車に揺られ</br>時間が来るまで　重ゲやる」</font></a></i></b></big>
 
-            <div class="description2"><big>&nbsp;俺を選べ　力を与える</big></div></div>
+            <div class="description2"><big>俺を選べ　力を与える</big></div></div>
             </br></br></br></br></br>
 <a href="https://store.line.me/stickershop/product/17669666/ja"><img src="https://media.discordapp.net/attachments/840252564242956298/920263044901244968/C9BA22E3-C991-47B4-B4CC-D0ECA4035B04_4_5005_c.jpeg" alt="LINEスタンプ広告" width="370" height="60"></a>
             </div></br></br>
