--- a/home.html
+++ b/home.html
@@ -142,7 +142,7 @@
             </br></br>
             <div class="news-heading"><div class="tooltip2">
                 
-            <big><b><i><a href="slogan.html" style="text-decoration:none;"><font color="white">今月の標語</br>「さむい朝から　電車に揺られ</br>時間が来るまで　重ゲやる」</font></a></i></b></big>
+            <big><b><i><a href="slogan.html" style="text-decoration:none;"><font color="white">今月の標語</br>「PLAY FOR SMILES</br>SMILES FOR LIFE 」</font></a></i></b></big>
 
             <div class="description2"><big>俺を選べ　力を与える</big></div></div>
             </br></br></br></br></br>
