--- a/archive.html
+++ b/archive.html
@@ -55,7 +55,7 @@
 </br></br>
               
     <div class="pop-box8">
-  <label for="popup-on8"><label for="popup-on8"><div class="btn-open8"><img src="https://pbs.twimg.com/media/FHTEqq6aIAEeFrk?format=jpg&name=large" alt="" width="380" height="290"class="layer-img"></div></label>
+  <label for="popup-on8"><label for="popup-on8"><div class="btn-open8"><img src="https://media.discordapp.net/attachments/840252564242956298/926528088026779668/05ACDE98-E4AD-4B53-B772-2E6F3423C16E.jpeg?width=1324&height=882" alt="" width="380" height="290"class="layer-img"></div></label>
   <input type="checkbox" id="popup-on8">
   <div class="popup8">
     <label for="popup-on8" class="icon-close8">×</label>
@@ -65,7 +65,7 @@
        </br></br><b>クリスマスビンゴ大会をしました！🎄</b><br>
        幹部の所持ボドゲ争奪ビンゴ大会を行いました！クリスマスにちなんで「原色寄りの服」という謎のドレスコードが課されました。突然の開催にも関わらずたくさんの方にご参加いただき、ありがとうございました！</br></br></br>
       2021年12月23日　</br></br>
-       <b>景品一覧</b></br>
+       <b>景品一覧</b></br>中古商品なのでそれぞれに状態を表した札がついているのがこだわりポイントです。（副代表談）</br>
       <img src="https://pbs.twimg.com/media/FHTEqx2aQAUraE3?format=jpg&name=large" alt="ビンゴ景品" width="511px" height="301px"class="layer-img"></br></br></br>
 
 
