--- a/archive.html
+++ b/archive.html
@@ -66,7 +66,8 @@
        幹部の所持ボドゲ争奪ビンゴ大会を行いました！クリスマスにちなんで「原色寄りの服」という謎のドレスコードが課されました。突然の開催にも関わらずたくさんの方にご参加いただき、ありがとうございました！</br></br></br>
       2021年12月23日　</br></br>
        <b>景品一覧</b></br>中古商品なのでそれぞれに状態を表した札がついているのがこだわりポイントです。（副代表談）</br>
-      <img src="https://pbs.twimg.com/media/FHTEqx2aQAUraE3?format=jpg&name=large" alt="ビンゴ景品" width="511px" height="301px"class="layer-img"></br></br></br>
+      <img src="https://pbs.twimg.com/media/FHTEqx2aQAUraE3?format=jpg&name=large" alt="ビンゴ景品" width="511px" height="301px"class="layer-img"></br>
+        中古商品なのでそれぞれに状態を表した札がついているのがこだわりポイントです。（副代表談）</br></br></br>
 
 
         <!-- ./ポップアップの中身　ここまで -->
