--- a/archive.html
+++ b/archive.html
@@ -93,7 +93,9 @@
        ゲムマ秋にボドゲ部から6、7名が買い出しに行ってきました〜！全員大満足の結果だったようです。戦利品で遊ぶのが楽しみですね😊</br></br></br>
       2021年11月20日　</br></br>
        <b>戦利品</b></br>
-      <img src="https://pbs.twimg.com/media/FEn_LHrVQAQUW0Y?format=jpg&name=medium" alt="ゲムマ戦利品" width="616px" height="397px"class="layer-img"></br></br></br>
+      <img src="https://pbs.twimg.com/media/FEn_LHrVQAQUW0Y?format=jpg&name=medium" alt="ゲムマ戦利品" width="616px" height="397px"class="layer-img"></br>
+        ゲムマは人々の財布を緩ませる魔力を持っている……。
+     </br></br></br>
 
 
         <!-- ./ポップアップの中身　ここまで -->
