--- a/archive.html
+++ b/archive.html
@@ -63,6 +63,7 @@
        
        <!-- ポップアップの中身 -->
        </br></br><b>クリスマスビンゴ大会をしました！🎄</b><br>
+      <img src="https://pbs.twimg.com/media/FHTEqq6aIAEeFrk?format=jpg&name=large" alt="ビンゴ大会" width="512px" height="388px"class="layer-img"></br>
        幹部の所持ボドゲ争奪ビンゴ大会を行いました！クリスマスにちなんで「原色寄りの服」という謎のドレスコードが課されました。突然の開催にも関わらずたくさんの方にご参加いただき、ありがとうございました！
       </br></br></br>
        <b>景品一覧</b></br>
