--- a/aboutus.html
+++ b/aboutus.html
@@ -100,7 +100,7 @@
                <a href="https://twitter.com/ra_mlot"><small>@ra_mlot</small></a>
             
             <br/>
-            2002年1月、降誕した。現在神奈川県町田市在住。最近はドミニオンとTRPGと筋トレに脳みそを支配されている。そのためまれに街中へドミニオンをやりに行き、サークル実施日でも失踪することがある。2021年ボードゲーム愛好会【お嬢様杯】自称優勝者。このサークルを青ドミにすることを企てている。</big>
+            2002年1月、降誕。現在神奈川県町田市在住。ドミニオンとTRPGと筋トレに脳みそを支配されている。よく街中へドミニオンをやりに行っているためサークル実施日でも失踪することがある。ドミニオン日本リーグに参加するなど根っからのドミニオン愛好家だが、ドミニオン以外のボドゲ愛も深い。2021年度ボードゲーム愛好会【お嬢様杯】自称優勝者。</big>
           </div></div>         
   
            
