--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
         </div>
 
 <div class="heading"><i>　出目良郎　利用規約　　</i></div>
-
+<iframe src="https://open.spotify.com/embed/track/2RlgNHKcydI9sayD2Df2xp?utm_source=generator" width="90%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 <img src="https://media.discordapp.net/attachments/860169910273179668/920711951871524874/2021-12-16_1.20.25.png" alt="ロゴ" width="500" height="400">
           
       </div>
