--- a/store.html
+++ b/store.html
@@ -44,6 +44,8 @@
   
 </head>
 <body>
+    
+
     <!-- TODO: Please edit here -->
 <div class="contents-wrapper">
          <a href="home.html" ><font color="white"><b>◀︎ボドゲ部Home</b></font></a>
@@ -76,6 +78,11 @@
  
  
 </div></br>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//suzuri.jp/thirdparty/widgets.js";js.charset="utf-8";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","suzuri-widget-script");</script>
+<div class="suzuri-widget-product" data-suzuri-product-id="23178689" data-suzuri-item-variant-id="175"><a href="https://suzuri.jp/-Ei-/9057883/sweat/s/black"><img src="https://d1q9av5b648rmv.cloudfront.net/v3/323x323/sweat/s/black/9057883/1641390103-3303x3657.png.jpg?h=404b678ef5651a2ac32cac980f8068a0243e347a&amp;printed=true" width="323" height="323"></a></div>
+
+
+
           <a href="home.html" ><font color="white"><b>◀︎ボドゲ部Home</b></font></a>
 
 </body>
