Update and rename storewordb to storewordb.html

--- a/storewordb.html
+++ b/storewordb.html
@@ -48,7 +48,7 @@
 
     <!-- TODO: Please edit here -->
 <div class="contents-wrapper">
-         <a href="store.html" ><font color="white"><b>◀︎文字選択戻る</b></font></a>
+         <a href="store.html" ><font color="white"><b>◀︎サイズ選択へ戻る</b></font></a>
     
 <div class="heading"><i>　　ボドゲ部商店　　</i>
 </div>
@@ -89,7 +89,7 @@
 
 
 </br>
-          <a href="store.html" ><font color="white"><b>◀︎文字選択へ戻る</b></font></a>
+          <a href="store.html" ><font color="white"><b>◀︎サイズ選択へ戻る</b></font></a>
 
 </body>
 </html>
