--- a/storesize.html
+++ b/storesize.html
@@ -48,7 +48,7 @@
 
     <!-- TODO: Please edit here -->
 <div class="contents-wrapper">
-         <a href="store.html" ><font color="white"><b>◀︎ボドゲ部商店戻る</b></font></a>
+         <a href="store.html" ><font color="white"><b>◀︎ボドゲ部商店へ戻る</b></font></a>
     
 <div class="heading"><i>　　ボドゲ部商店　　</i>
 </div>
