--- a/storesize.html
+++ b/storesize.html
@@ -70,10 +70,10 @@
     </br>
         <div class="profile">
             <big><b><span style="color:white">
-              ★ビッグシルエットスウェットについて★</br>
+              ★ビッグシルエットスウェットについて★</b></br>
                 ・普通の「スウェット」より1000円くらい高いです。</br>
                 ・カラーバリエーションが白とネイビーの2色展開です。</br>
-                </span></b>
+                </span>
             
             
             <br/>
