--- a/storesmallc.html
+++ b/storesmallc.html
@@ -103,6 +103,49 @@
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058576/sweat/s/black"><img src="https://media.discordapp.net/attachments/840252564242956298/929705090284146698/2F8DDBA8-1192-49FC-8790-0A8F47F7B8EE.png" alt="black_mint" hight="auto" width="15%"></a>
     </div>
+
+    </br>
+    <span style="color:white">　ネイビー</span></br>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058637/sweat/s/black"><img src="https://media.discordapp.net/attachments/840252564242956298/929705420677873704/762B3642-6F88-4752-AB98-14FEB6038772.png" alt="navy_white" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058583/sweat/s/black"><img src="https://media.discordapp.net/attachments/840252564242956298/929705420979847208/68B95558-B771-4774-977C-02CA3FC56505.png" alt="navy_red_f" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058576/sweat/s/black"><img src="https://media.discordapp.net/attachments/840252564242956298/929705421462204466/9F1AD4C3-9C6D-4760-8A50-C4A3414C01B3.png" alt="navy_orange" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058576/sweat/s/black"><img src="https://media.discordapp.net/attachments/840252564242956298/929705421902589982/200D0DA4-DDFE-4CFF-8AA5-1B5792F74AFA.png" alt="navy_yellow" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058576/sweat/s/black"><img src="https://media.discordapp.net/attachments/840252564242956298/929705422330400768/1B4F655F-1275-44AC-AF21-B6672995F8DE.png" alt="navy_yellow_f" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058576/sweat/s/black"><img src="https://media.discordapp.net/attachments/840252564242956298/929705422607249468/B5501210-F228-4A21-BD45-2498FA87C907.png" alt="navy_green" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058576/sweat/s/black"><img src="https://media.discordapp.net/attachments/840252564242956298/929705422812749824/77FCA072-197D-4C34-BDDF-B7345A609B31.png" alt="navy_green_f" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058576/sweat/s/black"><img src="https://media.discordapp.net/attachments/840252564242956298/929705427275501609/6D4F9CD5-2EF9-4ADC-9C7C-A52F946B12AA.png" alt="navy_zabun" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058576/sweat/s/black"><img src="https://media.discordapp.net/attachments/840252564242956298/929705427514581055/F7257671-1356-41F1-9464-68E8ED40381D.png" alt="navy_mint" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058576/sweat/s/black"><img src="https://media.discordapp.net/attachments/840252564242956298/929705427757854820/B4B23669-9D93-4E93-8704-5DE0C0132639.png" alt="navy_kusumizuiro" hight="auto" width="15%"></a>
+    </div>
     
         <div class="profile">
             <big><b></b>
