--- a/storesmallc.html
+++ b/storesmallc.html
@@ -58,9 +58,9 @@
 <div class="heading2"><i><small>　　ステップ3：色を選択してください。　　</small></i>
 </div>
         </br></br>
-    <span style="color:white">　白</span>
+    <span style="color:white">　　白</span>
     
-    </br>
+    </br></br>
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058493/sweat/s/white"><img src="https://media.discordapp.net/attachments/840252564242956298/929705012056166460/21F5A3DE-6DA3-48AE-A6BC-D1DF8BC0DC21.png" alt="white_red" hight="auto" width="15%"></a>
     </div>
@@ -90,7 +90,7 @@
     </div>
     
     </br>
-    <span style="color:white">　黒</span></br>
+    <span style="color:white">　　黒</span></br></br>
 
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058637/sweat/s/black"><img src="https://media.discordapp.net/attachments/840252564242956298/929705089856311296/C8B9E577-8749-4FB4-B349-47BF4835BCD6.png" alt="black_white" hight="auto" width="15%"></a>
@@ -105,7 +105,7 @@
     </div>
 
     </br>
-    <span style="color:white">　ネイビー</span></br>
+    <span style="color:white">　　ネイビー</span></br></br>
 
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058637/sweat/s/black"><img src="https://media.discordapp.net/attachments/840252564242956298/929705420677873704/762B3642-6F88-4752-AB98-14FEB6038772.png" alt="navy_white" hight="auto" width="15%"></a>
