--- a/storesmallc.html
+++ b/storesmallc.html
@@ -146,7 +146,40 @@
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058596/sweat/s/navy"><img src="https://media.discordapp.net/attachments/840252564242956298/929705427757854820/B4B23669-9D93-4E93-8704-5DE0C0132639.png" alt="navy_kusumizuiro" hight="auto" width="15%"></a>
     </div>
+
+
+    </br></br>
+    <span style="color:white">　&nbsp;グレー</span></br>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/mixgray"><img src="https://media.discordapp.net/attachments/840252564242956298/929705704510590997/A249A0E2-6A7A-409D-9603-FE41280447F9.png" alt="gray_white" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058450/sweat/s/mixgray"><img src="https://media.discordapp.net/attachments/840252564242956298/929705704762265610/C0E069BB-5B52-41DC-8160-26B14C9FB3CD.png" alt="gray_yellow_f" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058493/sweat/s/mixgray"><img src="https://media.discordapp.net/attachments/840252564242956298/929705705252991046/A3E46492-3970-45EF-A55E-AF4D10A6457C.png" alt="gray_red" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058417/sweat/s/mixgray"><img src="https://media.discordapp.net/attachments/840252564242956298/929705705504661534/F9E3BF2C-21FB-4C59-9B30-96AAD81D7B47.png" alt="gray_red_f" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058609/sweat/s/mixgray"><img src="https://media.discordapp.net/attachments/840252564242956298/929705705810849882/333A8521-8B05-4624-BC86-23A28792815E.png" alt="gray_navy" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058479/sweat/s/mixgray"><img src="https://media.discordapp.net/attachments/840252564242956298/929705706142179359/191D8B3F-D0E2-4C2A-A561-22926DB5B46F.png" alt="gray_navy_f" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058583/sweat/s/mixgray"><img src="https://media.discordapp.net/attachments/840252564242956298/929705705005522944/3F61D1A8-34EE-4BD2-A506-F3E0F4DC4D44.png" alt="gray_zabun" hight="auto" width="15%"></a>
+    </div>
     
+
         <div class="profile">
             <big><b></b>
             
