--- a/storesmallc.html
+++ b/storesmallc.html
@@ -58,7 +58,7 @@
 <div class="heading2"><i><small>　　ステップ3：色を選択してください。　　</small></i>
 </div>
         </br></br>
-    <span style="color:white">　&nbsp;ホワイト</span>
+    <span style="color:white"><b>　&nbsp;ホワイト（他の色より610円安い）</b></span>
     
     </br>
     <div class="face-photo">
