--- a/storesmallc.html
+++ b/storesmallc.html
@@ -200,6 +200,27 @@
     </div>
 
 
+
+    </br></br>
+    <span style="color:white">　&nbsp;ロイヤルブルー</span></br>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/royalblue"><img src="https://media.discordapp.net/attachments/840252564242956298/929705899310870538/C2203A46-0DA0-4AA7-A236-BC4406A9DBDA.png" alt="blue_white" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058609/sweat/s/royalblue"><img src="https://media.discordapp.net/attachments/840252564242956298/929705899747057664/EC1FAF75-EA5E-435E-9927-11B4EA9771AA.png" alt="blue_navy" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058479/sweat/s/royalblue"><img src="https://media.discordapp.net/attachments/840252564242956298/929705899944181821/141C7DC4-615F-47EF-A51B-7B943FC8030E.png" alt="yellow_navy_f" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058541/sweat/s/royalblue"><img src="https://media.discordapp.net/attachments/840252564242956298/929705788098871366/A8A3B57C-C640-4FC9-BC53-12C7A231C3D4.png" alt="yellow_navy_f" hight="auto" width="15%"></a>
+    </div>
+
+
     
 
         <div class="profile">
