--- a/storesmallc.html
+++ b/storesmallc.html
@@ -213,11 +213,11 @@
     </div>
 
     <div class="face-photo">
-                <a href="https://suzuri.jp/-Ei-/9058479/sweat/s/royalblue"><img src="https://media.discordapp.net/attachments/840252564242956298/929705899944181821/141C7DC4-615F-47EF-A51B-7B943FC8030E.png" alt="yellow_navy_f" hight="auto" width="15%"></a>
+                <a href="https://suzuri.jp/-Ei-/9058479/sweat/s/royalblue"><img src="https://media.discordapp.net/attachments/840252564242956298/929705899944181821/141C7DC4-615F-47EF-A51B-7B943FC8030E.png" alt="blue_navy_f" hight="auto" width="15%"></a>
     </div>
 
     <div class="face-photo">
-                <a href="https://suzuri.jp/-Ei-/9058541/sweat/s/royalblue"><img src="https://media.discordapp.net/attachments/840252564242956298/929705788098871366/A8A3B57C-C640-4FC9-BC53-12C7A231C3D4.png" alt="yellow_navy_f" hight="auto" width="15%"></a>
+                <a href="https://suzuri.jp/-Ei-/9058541/sweat/s/royalblue"><img src="https://media.discordapp.net/attachments/840252564242956298/929705899524784178/18986C79-514A-4573-8F48-6C6875D81C13.png" alt="blue_yellow" hight="auto" width="15%"></a>
     </div>
 
 
