--- a/storesmallc.html
+++ b/storesmallc.html
@@ -60,7 +60,7 @@
        
     
     </br></br>
-    <span style="color:white">　&nbsp;ブラック</span></br>
+    <span style="color:white"><b>　&nbsp;ブラック</b></span></br>
 
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/black"><img src="https://media.discordapp.net/attachments/840252564242956298/929705089856311296/C8B9E577-8749-4FB4-B349-47BF4835BCD6.png" alt="black_white" hight="auto" width="15%"></a>
@@ -152,7 +152,7 @@
 
 
     </br></br>
-    <span style="color:white">　&nbsp;ミックスグレー</span></br>
+    <span style="color:white"><b>　&nbsp;ミックスグレー</b></span></br>
 
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/mixgray"><img src="https://media.discordapp.net/attachments/840252564242956298/929705704510590997/A249A0E2-6A7A-409D-9603-FE41280447F9.png" alt="gray_white" hight="auto" width="15%"></a>
@@ -184,7 +184,7 @@
 
 
     </br></br>
-    <span style="color:white">　&nbsp;ゴールド</span></br>
+    <span style="color:white"><b>　&nbsp;ゴールド</b></span></br>
 
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/gold"><img src="https://media.discordapp.net/attachments/840252564242956298/929705787570393139/C11E7FD5-5E70-41EC-8AE7-A3CC4A947A31.png" alt="yellow_white" hight="auto" width="15%"></a>
@@ -205,7 +205,7 @@
 
 
     </br></br>
-    <span style="color:white">　&nbsp;ロイヤルブルー</span></br>
+    <span style="color:white"><b>　&nbsp;ロイヤルブルー</b></span></br>
 
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/royalblue"><img src="https://media.discordapp.net/attachments/840252564242956298/929705899310870538/C2203A46-0DA0-4AA7-A236-BC4406A9DBDA.png" alt="blue_white" hight="auto" width="15%"></a>
