--- a/storesmallc.html
+++ b/storesmallc.html
@@ -75,7 +75,7 @@
     </div>
 
     </br></br>
-    <span style="color:white">　&nbsp;ネイビー</span></br>
+    <span style="color:white"><b>　&nbsp;ネイビー</b></span></br>
 
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/navy"><img src="https://media.discordapp.net/attachments/840252564242956298/929705420677873704/762B3642-6F88-4752-AB98-14FEB6038772.png" alt="navy_white" hight="auto" width="15%"></a>
