--- a/storesmallc.html
+++ b/storesmallc.html
@@ -119,7 +119,7 @@
 
 
     </br></br>
-    <span style="color:white"><b>&nbsp;ホワイト（他の色より610円安い）</b></span>
+    <span style="color:white"><b>&nbsp;ホワイト</b>（他の色より610円安い）</span>
     
     </br>
     <div class="face-photo">
