--- a/storesmallc.html
+++ b/storesmallc.html
@@ -224,6 +224,29 @@
     </div>
 
 
+    </br></br>
+    <span style="color:white"><b>&nbsp;オレンジ</b></span></br>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/orange"><img src="https://media.discordapp.net/attachments/840252564242956298/929705956298866688/4EF70EE4-4829-4A51-A621-9DFFE71DF8C2.png" alt="orange_white" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058609/sweat/s/orange"><img src="https://media.discordapp.net/attachments/840252564242956298/929705956529565746/242D085D-FEBE-477B-BAD1-981072A4CB3E.png" alt="orange_white" hight="auto" width="15%"></a>
+    </div>
+
+
+    </br></br>
+    <span style="color:white"><b>&nbsp;レッド</b></span></br>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/red"><img src="https://media.discordapp.net/attachments/840252564242956298/929706019205046272/E1C6A3F9-DF31-4948-8140-267952CC94BE.png" alt="red_white" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058479/sweat/s/red"><img src="https://media.discordapp.net/attachments/840252564242956298/929706019427332106/B9FD3704-1B0B-4D59-B5EF-C5E4DAA39528.png" alt="red_navy_f" hight="auto" width="15%"></a>
+    </div>
+
     
 
         <div class="profile">
