--- a/storesmallc.html
+++ b/storesmallc.html
@@ -247,6 +247,18 @@
                 <a href="https://suzuri.jp/-Ei-/9058479/sweat/s/red"><img src="https://media.discordapp.net/attachments/840252564242956298/929706019427332106/B9FD3704-1B0B-4D59-B5EF-C5E4DAA39528.png" alt="red_navy_f" hight="auto" width="15%"></a>
     </div>
 
+    </br></br>
+    <span style="color:white"><b>&nbsp;パープル</b></span></br>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/purple"><img src="https://media.discordapp.net/attachments/840252564242956298/929706172804640828/EDBFE134-59D0-4E12-8CF9-72984F34D21D.png" alt="purple_white" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058541/sweat/s/purple"><img src="https://media.discordapp.net/attachments/840252564242956298/929706173119217674/4CDC7DD8-ECF1-4429-B40D-3089FAC1CB7D.png" alt="purple_yellow" hight="auto" width="15%"></a>
+    </div>
+
+
     
 
         <div class="profile">
