--- a/storesmallc.html
+++ b/storesmallc.html
@@ -247,6 +247,7 @@
                 <a href="https://suzuri.jp/-Ei-/9058479/sweat/s/red"><img src="https://media.discordapp.net/attachments/840252564242956298/929706019427332106/B9FD3704-1B0B-4D59-B5EF-C5E4DAA39528.png" alt="red_navy_f" hight="auto" width="15%"></a>
     </div>
 
+
     </br></br>
     <span style="color:white"><b>&nbsp;パープル</b></span></br>
 
@@ -257,6 +258,54 @@
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058541/sweat/s/purple"><img src="https://media.discordapp.net/attachments/840252564242956298/929706173119217674/4CDC7DD8-ECF1-4429-B40D-3089FAC1CB7D.png" alt="purple_yellow" hight="auto" width="15%"></a>
     </div>
+
+
+
+    </br></br>
+    <span style="color:white"><b>&nbsp;チャコール&ダークブラウン</b></span></br>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/charcoal"><img src="https://media.discordapp.net/attachments/840252564242956298/929706172804640828/EDBFE134-59D0-4E12-8CF9-72984F34D21D.png" alt="charcoal_white" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/darkbrown"><img src="https://media.discordapp.net/attachments/840252564242956298/929706240379060274/C4259336-9D3F-440C-BE47-D7A8EA4C0379.png" alt="darkbrown_yellow" hight="auto" width="15%"></a>
+    </div>
+
+
+    </br></br>
+    <span style="color:white"><b>&nbsp;アイビーグリーン</b></span></br>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/ivygreen"><img src="https://media.discordapp.net/attachments/840252564242956298/929706303402688592/7CCB1B9F-5995-4186-8F99-569D779EB9BE.png" alt="green_white" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058479/sweat/s/ivygreen"><img src="https://media.discordapp.net/attachments/840252564242956298/929706303713071104/2697B60E-B949-4053-82EF-5876BD53C43B.png" alt="green_navy_f" hight="auto" width="15%"></a>
+    </div>
+
+
+
+    </br></br>
+    <span style="color:white"><b>&nbsp;ライトピンク</b></span></br>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058557/sweat/s/lightpink"><img src="https://media.discordapp.net/attachments/840252564242956298/929706363070873640/3A8A74C2-12D0-404E-8691-A40E8F08A674.png" alt="pink_green" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058583/sweat/s/lightpink"><img src="https://media.discordapp.net/attachments/840252564242956298/929706363293139014/3F9C28BE-3B77-4A78-A4D4-5A1590137BEA.png" alt="pink_zabun" hight="auto" width="15%"></a>
+    </div>
+
+
+
+    </br></br>
+    <span style="color:white"><b>&nbsp;ナチュラル</b></span></br>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058576/sweat/s/natural"><img src="https://media.discordapp.net/attachments/840252564242956298/929706400756666409/51A2B3CC-2816-400E-B69F-0668B9225B50.png" alt="natural_mint" hight="auto" width="15%"></a>
+    </div>
+
 
 
     
