--- a/storesmallc.html
+++ b/storesmallc.html
@@ -258,10 +258,10 @@
 
 
     </br></br>
-    <span style="color:white"><b>&nbsp;チャコール&ダークブラウン</b></span></br>
+    <span style="color:white"><b>&nbsp;チャコール,　ダークブラウン</b></span></br>
 
     <div class="face-photo">
-                <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/charcoal"><img src="https://media.discordapp.net/attachments/840252564242956298/929706172804640828/EDBFE134-59D0-4E12-8CF9-72984F34D21D.png" alt="charcoal_white" hight="auto" width="15%"></a>
+                <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/charcoal"><img src="https://media.discordapp.net/attachments/840252564242956298/929706240072888350/8CEA5A7F-A58B-4AE1-B508-E358BCF5D8CB.png" alt="charcoal_white" hight="auto" width="15%"></a>
     </div>
 
     <div class="face-photo">
