--- a/storesmalld.html
+++ b/storesmalld.html
@@ -60,7 +60,9 @@
        
     
     </br></br>
-    <span style="color:white"><b>  <span class="v-middle">&nbsp;ブラック</span></b></span>
+    <div class="face-photo">
+                <img src="https://media.discordapp.net/attachments/840252564242956298/929744285249732648/2ef00a6f2dd38c00.png" alt="色：ブラック" hight="auto" width="15%"></a>
+    </div>
 
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/black"><img src="https://media.discordapp.net/attachments/840252564242956298/929705089856311296/C8B9E577-8749-4FB4-B349-47BF4835BCD6.png" alt="black_white" hight="auto" width="15%"></a>
