--- a/storesmalld.html
+++ b/storesmalld.html
@@ -77,7 +77,9 @@
     </div>
 
     
-    <span style="color:white"><b>&nbsp;ネイビー</b></span>
+    <div class="face-photo">
+                <img src="https://media.discordapp.net/attachments/840252564242956298/929744664096038932/4febb1caf8c90473.png" alt="色：ネイビー" hight="auto" width="15%"></a>
+    </div>
 
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/navy"><img src="https://media.discordapp.net/attachments/840252564242956298/929705420677873704/762B3642-6F88-4752-AB98-14FEB6038772.png" alt="navy_white" hight="auto" width="15%"></a>
