--- a/storesmallc.html
+++ b/storesmallc.html
@@ -221,7 +221,7 @@
 
 
     </br></br>
-    <span style="color:white"><b>&nbsp;オレンジ</b></span></br>
+    <span style="color:white"><b>&nbsp;オレンジ　　レッド</b></span></br>
 
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/orange"><img src="https://media.discordapp.net/attachments/840252564242956298/929705956298866688/4EF70EE4-4829-4A51-A621-9DFFE71DF8C2.png" alt="orange_white" hight="auto" width="15%"></a>
@@ -231,9 +231,6 @@
                 <a href="https://suzuri.jp/-Ei-/9058609/sweat/s/orange"><img src="https://media.discordapp.net/attachments/840252564242956298/929705956529565746/242D085D-FEBE-477B-BAD1-981072A4CB3E.png" alt="orange_white" hight="auto" width="15%"></a>
     </div>
 
-
-    </br></br>
-    <span style="color:white"><b>&nbsp;レッド</b></span></br>
 
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/red"><img src="https://media.discordapp.net/attachments/840252564242956298/929706019205046272/E1C6A3F9-DF31-4948-8140-267952CC94BE.png" alt="red_white" hight="auto" width="15%"></a>
@@ -245,7 +242,7 @@
 
 
     </br></br>
-    <span style="color:white"><b>&nbsp;パープル</b></span></br>
+    <span style="color:white"><b>&nbsp;パープル　　チャコール　　ダークブラウン</b></span></br>
 
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/purple"><img src="https://media.discordapp.net/attachments/840252564242956298/929706172804640828/EDBFE134-59D0-4E12-8CF9-72984F34D21D.png" alt="purple_white" hight="auto" width="15%"></a>
@@ -257,9 +254,6 @@
 
 
 
-    </br></br>
-    <span style="color:white"><b>&nbsp;チャコール,　ダークブラウン</b></span></br>
-
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/charcoal"><img src="https://media.discordapp.net/attachments/840252564242956298/929706240072888350/8CEA5A7F-A58B-4AE1-B508-E358BCF5D8CB.png" alt="charcoal_white" hight="auto" width="15%"></a>
     </div>
@@ -270,7 +264,7 @@
 
 
     </br></br>
-    <span style="color:white"><b>&nbsp;アイビーグリーン</b></span></br>
+    <span style="color:white"><b>&nbsp;アイビーグリーン　　ライトピンク　　ナチュラル</b></span></br>
 
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/ivygreen"><img src="https://media.discordapp.net/attachments/840252564242956298/929706303402688592/7CCB1B9F-5995-4186-8F99-569D779EB9BE.png" alt="green_white" hight="auto" width="15%"></a>
@@ -282,8 +276,6 @@
 
 
 
-    </br></br>
-    <span style="color:white"><b>&nbsp;ライトピンク</b></span></br>
 
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058557/sweat/s/lightpink"><img src="https://media.discordapp.net/attachments/840252564242956298/929706363070873640/3A8A74C2-12D0-404E-8691-A40E8F08A674.png" alt="pink_green" hight="auto" width="15%"></a>
@@ -295,8 +287,6 @@
 
 
 
-    </br></br>
-    <span style="color:white"><b>&nbsp;ナチュラル</b></span></br>
 
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058576/sweat/s/natural"><img src="https://media.discordapp.net/attachments/840252564242956298/929706400756666409/51A2B3CC-2816-400E-B69F-0668B9225B50.png" alt="natural_mint" hight="auto" width="15%"></a>
