--- a/storesmallc.html
+++ b/storesmallc.html
@@ -221,7 +221,7 @@
 
 
     </br></br>
-    <span style="color:white"><b>&nbsp;オレンジ　　レッド</b></span></br>
+    <span style="color:white"><b>&nbsp;オレンジ／レッド</b></span></br>
 
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/orange"><img src="https://media.discordapp.net/attachments/840252564242956298/929705956298866688/4EF70EE4-4829-4A51-A621-9DFFE71DF8C2.png" alt="orange_white" hight="auto" width="15%"></a>
@@ -242,7 +242,7 @@
 
 
     </br></br>
-    <span style="color:white"><b>&nbsp;パープル　　チャコール　　ダークブラウン</b></span></br>
+    <span style="color:white"><b>&nbsp;パープル／チャコール／ダークブラウン</b></span></br>
 
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/purple"><img src="https://media.discordapp.net/attachments/840252564242956298/929706172804640828/EDBFE134-59D0-4E12-8CF9-72984F34D21D.png" alt="purple_white" hight="auto" width="15%"></a>
@@ -264,7 +264,7 @@
 
 
     </br></br>
-    <span style="color:white"><b>&nbsp;アイビーグリーン　　ライトピンク　　ナチュラル</b></span></br>
+    <span style="color:white"><b>&nbsp;アイビーグリーン／ライトピンク／ナチュラル</b></span></br>
 
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/ivygreen"><img src="https://media.discordapp.net/attachments/840252564242956298/929706303402688592/7CCB1B9F-5995-4186-8F99-569D779EB9BE.png" alt="green_white" hight="auto" width="15%"></a>
