--- a/storesmallc.html
+++ b/storesmallc.html
@@ -119,7 +119,7 @@
 
 
     </br></br>
-    <span style="color:white"><b>&nbsp;ホワイト</b>（他の色より610円安い）</span>
+    <span style="color:white"><b>&nbsp;ホワイト／ライトピンク／ナチュラル</b>（他の色より610円安い）</span>
     
     </br>
     <div class="face-photo">
@@ -148,6 +148,19 @@
     
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058609/sweat/s/white"><img src="https://media.discordapp.net/attachments/840252564242956298/929705013293514772/IMG_3264.png" alt="white_navy" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058557/sweat/s/lightpink"><img src="https://media.discordapp.net/attachments/840252564242956298/929706363070873640/3A8A74C2-12D0-404E-8691-A40E8F08A674.png" alt="pink_green" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058583/sweat/s/lightpink"><img src="https://media.discordapp.net/attachments/840252564242956298/929706363293139014/3F9C28BE-3B77-4A78-A4D4-5A1590137BEA.png" alt="pink_zabun" hight="auto" width="15%"></a>
+    </div>
+
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058576/sweat/s/natural"><img src="https://media.discordapp.net/attachments/840252564242956298/929706400756666409/51A2B3CC-2816-400E-B69F-0668B9225B50.png" alt="natural_mint" hight="auto" width="15%"></a>
     </div>
 
 
@@ -184,7 +197,7 @@
 
 
     </br></br>
-    <span style="color:white"><b>&nbsp;ゴールド</b></span></br>
+    <span style="color:white"><b>&nbsp;ゴールド／パープル</b></span></br>
 
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/gold"><img src="https://media.discordapp.net/attachments/840252564242956298/929705787570393139/C11E7FD5-5E70-41EC-8AE7-A3CC4A947A31.png" alt="yellow_white" hight="auto" width="15%"></a>
@@ -199,9 +212,18 @@
     </div>
 
 
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/purple"><img src="https://media.discordapp.net/attachments/840252564242956298/929706172804640828/EDBFE134-59D0-4E12-8CF9-72984F34D21D.png" alt="purple_white" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058541/sweat/s/purple"><img src="https://media.discordapp.net/attachments/840252564242956298/929706173119217674/4CDC7DD8-ECF1-4429-B40D-3089FAC1CB7D.png" alt="purple_yellow" hight="auto" width="15%"></a>
+    </div>
+
+
 
     </br></br>
-    <span style="color:white"><b>&nbsp;ロイヤルブルー</b></span></br>
+    <span style="color:white"><b>&nbsp;ロイヤルブルー／レッド</b></span></br>
 
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/royalblue"><img src="https://media.discordapp.net/attachments/840252564242956298/929705899310870538/C2203A46-0DA0-4AA7-A236-BC4406A9DBDA.png" alt="blue_white" hight="auto" width="15%"></a>
@@ -220,8 +242,17 @@
     </div>
 
 
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/red"><img src="https://media.discordapp.net/attachments/840252564242956298/929706019205046272/E1C6A3F9-DF31-4948-8140-267952CC94BE.png" alt="red_white" hight="auto" width="15%"></a>
+    </div>
+
+    <div class="face-photo">
+                <a href="https://suzuri.jp/-Ei-/9058479/sweat/s/red"><img src="https://media.discordapp.net/attachments/840252564242956298/929706019427332106/B9FD3704-1B0B-4D59-B5EF-C5E4DAA39528.png" alt="red_navy_f" hight="auto" width="15%"></a>
+    </div>
+
+
     </br></br>
-    <span style="color:white"><b>&nbsp;オレンジ／レッド</b></span></br>
+    <span style="color:white"><b>&nbsp;オレンジ／アイビーグリーン／チャコール／ダークブラウン</b></span></br>
 
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/orange"><img src="https://media.discordapp.net/attachments/840252564242956298/929705956298866688/4EF70EE4-4829-4A51-A621-9DFFE71DF8C2.png" alt="orange_white" hight="auto" width="15%"></a>
@@ -233,26 +264,12 @@
 
 
     <div class="face-photo">
-                <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/red"><img src="https://media.discordapp.net/attachments/840252564242956298/929706019205046272/E1C6A3F9-DF31-4948-8140-267952CC94BE.png" alt="red_white" hight="auto" width="15%"></a>
+                <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/ivygreen"><img src="https://media.discordapp.net/attachments/840252564242956298/929706303402688592/7CCB1B9F-5995-4186-8F99-569D779EB9BE.png" alt="green_white" hight="auto" width="15%"></a>
     </div>
 
     <div class="face-photo">
-                <a href="https://suzuri.jp/-Ei-/9058479/sweat/s/red"><img src="https://media.discordapp.net/attachments/840252564242956298/929706019427332106/B9FD3704-1B0B-4D59-B5EF-C5E4DAA39528.png" alt="red_navy_f" hight="auto" width="15%"></a>
+                <a href="https://suzuri.jp/-Ei-/9058479/sweat/s/ivygreen"><img src="https://media.discordapp.net/attachments/840252564242956298/929706303713071104/2697B60E-B949-4053-82EF-5876BD53C43B.png" alt="green_navy_f" hight="auto" width="15%"></a>
     </div>
-
-
-    </br></br>
-    <span style="color:white"><b>&nbsp;パープル／チャコール／ダークブラウン</b></span></br>
-
-    <div class="face-photo">
-                <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/purple"><img src="https://media.discordapp.net/attachments/840252564242956298/929706172804640828/EDBFE134-59D0-4E12-8CF9-72984F34D21D.png" alt="purple_white" hight="auto" width="15%"></a>
-    </div>
-
-    <div class="face-photo">
-                <a href="https://suzuri.jp/-Ei-/9058541/sweat/s/purple"><img src="https://media.discordapp.net/attachments/840252564242956298/929706173119217674/4CDC7DD8-ECF1-4429-B40D-3089FAC1CB7D.png" alt="purple_yellow" hight="auto" width="15%"></a>
-    </div>
-
-
 
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/charcoal"><img src="https://media.discordapp.net/attachments/840252564242956298/929706240072888350/8CEA5A7F-A58B-4AE1-B508-E358BCF5D8CB.png" alt="charcoal_white" hight="auto" width="15%"></a>
@@ -262,35 +279,6 @@
                 <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/darkbrown"><img src="https://media.discordapp.net/attachments/840252564242956298/929706240379060274/C4259336-9D3F-440C-BE47-D7A8EA4C0379.png" alt="darkbrown_yellow" hight="auto" width="15%"></a>
     </div>
 
-
-    </br></br>
-    <span style="color:white"><b>&nbsp;アイビーグリーン／ライトピンク／ナチュラル</b></span></br>
-
-    <div class="face-photo">
-                <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/ivygreen"><img src="https://media.discordapp.net/attachments/840252564242956298/929706303402688592/7CCB1B9F-5995-4186-8F99-569D779EB9BE.png" alt="green_white" hight="auto" width="15%"></a>
-    </div>
-
-    <div class="face-photo">
-                <a href="https://suzuri.jp/-Ei-/9058479/sweat/s/ivygreen"><img src="https://media.discordapp.net/attachments/840252564242956298/929706303713071104/2697B60E-B949-4053-82EF-5876BD53C43B.png" alt="green_navy_f" hight="auto" width="15%"></a>
-    </div>
-
-
-
-
-    <div class="face-photo">
-                <a href="https://suzuri.jp/-Ei-/9058557/sweat/s/lightpink"><img src="https://media.discordapp.net/attachments/840252564242956298/929706363070873640/3A8A74C2-12D0-404E-8691-A40E8F08A674.png" alt="pink_green" hight="auto" width="15%"></a>
-    </div>
-
-    <div class="face-photo">
-                <a href="https://suzuri.jp/-Ei-/9058583/sweat/s/lightpink"><img src="https://media.discordapp.net/attachments/840252564242956298/929706363293139014/3F9C28BE-3B77-4A78-A4D4-5A1590137BEA.png" alt="pink_zabun" hight="auto" width="15%"></a>
-    </div>
-
-
-
-
-    <div class="face-photo">
-                <a href="https://suzuri.jp/-Ei-/9058576/sweat/s/natural"><img src="https://media.discordapp.net/attachments/840252564242956298/929706400756666409/51A2B3CC-2816-400E-B69F-0668B9225B50.png" alt="natural_mint" hight="auto" width="15%"></a>
-    </div>
 
 
 
