--- a/storesmallc.html
+++ b/storesmallc.html
@@ -8,9 +8,6 @@
     <link rel="stylesheet" href="css/archive.css">
     <script src="components/loader.js"></script>
     <script>
-        //
-        // TODO: Write JavaScript code here
-        //
     </script>
       <!-- ページのタイトル -->
   <title>ボドゲ部商店</title>
@@ -75,10 +72,10 @@
     </div>
 
     </br></br>
-    <span style="color:white"><b></b></span></br>
+    <span style="color:white"><b>&nbsp;ネイビー</b></span></br>
 
     <div class="face-photo">
-                <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/navy"><img src="https://media.discordapp.net/attachments/840252564242956298/929756368863387679/navytest.png" alt="navy_white" hight="auto" width="15%"></a>
+                <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/navy"><img src="https://media.discordapp.net/attachments/840252564242956298/929705420677873704/762B3642-6F88-4752-AB98-14FEB6038772.png" alt="navy_white" hight="auto" width="15%"></a>
     </div>
 
     <div class="face-photo">
