--- a/storesmallc.html
+++ b/storesmallc.html
@@ -116,7 +116,7 @@
 
 
     </br></br>
-    <span style="color:white"><b>&nbsp;ホワイト／ライトピンク／ナチュラル</b>（他の色より610円安い）</span>
+    <span style="color:white"><b>&nbsp;ホワイト&nbsp;／&nbsp;ライトピンク&nbsp;／&nbsp;ナチュラル&nbsp;</b>（他の色より610円安い）</span>
     
     </br>
     <div class="face-photo">
@@ -194,7 +194,7 @@
 
 
     </br></br>
-    <span style="color:white"><b>&nbsp;ゴールド／パープル</b></span></br>
+    <span style="color:white"><b>&nbsp;ゴールド&nbsp;／&nbsp;パープル</b></span></br>
 
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/gold"><img src="https://media.discordapp.net/attachments/840252564242956298/929705787570393139/C11E7FD5-5E70-41EC-8AE7-A3CC4A947A31.png" alt="yellow_white" hight="auto" width="15%"></a>
@@ -220,7 +220,7 @@
 
 
     </br></br>
-    <span style="color:white"><b>&nbsp;ロイヤルブルー／レッド</b></span></br>
+    <span style="color:white"><b>&nbsp;ロイヤルブルー&nbsp;／&nbsp;レッド</b></span></br>
 
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/royalblue"><img src="https://media.discordapp.net/attachments/840252564242956298/929705899310870538/C2203A46-0DA0-4AA7-A236-BC4406A9DBDA.png" alt="blue_white" hight="auto" width="15%"></a>
@@ -249,7 +249,7 @@
 
 
     </br></br>
-    <span style="color:white"><b>&nbsp;オレンジ／アイビーグリーン／チャコール／ダークブラウン</b></span></br>
+    <span style="color:white"><b>&nbsp;オレンジ&nbsp;／&nbsp;アイビーグリーン&nbsp;／&nbsp;チャコール&nbsp;／&nbsp;ダークブラウン</b></span></br>
 
     <div class="face-photo">
                 <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/orange"><img src="https://media.discordapp.net/attachments/840252564242956298/929705956298866688/4EF70EE4-4829-4A51-A621-9DFFE71DF8C2.png" alt="orange_white" hight="auto" width="15%"></a>
