--- a/storesize.html
+++ b/storesize.html
@@ -70,10 +70,11 @@
     </br>
         <div class="profile">
             <span style="color:white"><b>
-              ★ビッグシルエットスウェットについて★</b></br>
+              ★ビッグシルエットスウェットについて★</b></br></br>
                 <small>
-                ・普通の「スウェット」より1000円くらい高いです。</br>
-                ・カラーバリエーションが白とネイビーの2色展開です。
+                ・普通の「スウェット」より1000円くらい高いよ。</br>
+                ・生地の色は白、紺、黒の3色のみ。
+                ・ビッグが欲しかったら、普通のスウェットでやや大きめサイズを買うのも良いと思う。
                 </small>
                 </br>
                 </span>
