--- a/storebigp.html
+++ b/storebigp.html
@@ -116,7 +116,7 @@
 
 
     </br></br>
-    <span style="color:white"><b>&nbsp;ホワイト&nbsp;／&nbsp;ライトピンク&nbsp;／&nbsp;ナチュラル&nbsp;</b>（他の色より610円安い）</span>
+    <span style="color:white"><b>&nbsp;ホワイト</b>（他の色より610円安い）</span>
     
     
     <div class="face-photo">
