--- a/storebigp.html
+++ b/storebigp.html
@@ -116,7 +116,7 @@
 
 
     </br></br>
-    <span style="color:white"><b>&nbsp;ホワイト</b>（他の色より610円安い）</span>
+    <span style="color:white"><b>&nbsp;ホワイト</b>（他の色より610円安い）</span></br>
     
     
     <div class="face-photo">
