--- a/storewords.html
+++ b/storewords.html
@@ -50,7 +50,7 @@
 <div class="contents-wrapper">
          <a href="storesize.html" ><font color="white"><b>◀︎形選択へ戻る</b></font></a>
     
-<div class="heading"><i>　　ボドゲ部員専用スウェット　　</i>
+<div class="heading"><i>　　部員専用スウェット　　</i>
 </div>
     
     </br>    <span style="color:white"><b>&nbsp;どの言葉を選んでもカラーバリエーションは同じです。</b></span></br>
