--- a/storebigp.html
+++ b/storebigp.html
@@ -45,7 +45,7 @@
 
     <!-- TODO: Please edit here -->
 <div class="contents-wrapper">
-         <a href="storewords.html" ><font color="white"><b>◀︎言葉選択へ戻る</b></font></a>
+         <a href="storewordb.html" ><font color="white"><b>◀︎言葉選択へ戻る</b></font></a>
     
 <div class="heading"><a href="store.html" style="text-decoration:none;"><font color="black"><i>　　ボドゲ部員専用スウェット　　</font></i></a>
 </div>
@@ -163,7 +163,7 @@
 
 
 </br>
-          <a href="storewords.html" ><font color="white"><b>◀︎言葉選択へ戻る</b></font></a>
+          <a href="storewordb.html" ><font color="white"><b>◀︎言葉選択へ戻る</b></font></a>
 
 </body>
 </html>
