--- a/storewords.html
+++ b/storewords.html
@@ -50,7 +50,7 @@
 <div class="contents-wrapper">
          <a href="storesize.html" ><font color="white"><b>◀︎形選択へ戻る</b></font></a>
     
-<div class="heading"><i>　　部員専用スウェット　　</i>
+<div class="heading"><a href="store.html" style="text-decoration:none;"><font color="black"><i>　　部員専用スウェット　　</font></i></a>
 </div>
      
 <div class="heading2"><i><small>　　ステップ2：言葉を選択してください。　　</small></i>
