--- a/storesize.html
+++ b/storesize.html
@@ -60,19 +60,19 @@
         </br></br>
     
     <div class="face-photo">
-                <a href="storewordb.html"><img src="https://media.discordapp.net/attachments/840252564242956298/929769517947682816/IMG_1915.png?width=874&height=1045" alt="BIG" hight="auto" width="40%"></a>
+                <a href="storewordb.html"><img src="https://media.discordapp.net/attachments/840252564242956298/929810521727860837/7BE540EA-99EC-41E2-A382-8AC8BD3FD150.png?width=874&height=1045" alt="BIG" hight="auto" width="40%"></a>
     
     </div>
     　
     <div class="face-photo">
-                <a href="storewords.html"><img src="https://media.discordapp.net/attachments/840252564242956298/929769518153224242/391B3D05-A5F8-4B1E-B5AC-A3B419D280B0.png?width=874&height=1045" alt="NORMAL" hight="auto" width="40%"></a>
+                <a href="storewords.html"><img src="https://media.discordapp.net/attachments/840252564242956298/929810521992069160/5A5F0DD6-A2C5-47C5-8920-C634E61D59A3.png?width=874&height=1045" alt="NORMAL" hight="auto" width="40%"></a>
     </div>
     </br></br>
         <div class="profile">
             <span style="color:white"><b>
               ★ビッグシルエットスウェットについて★</b></br></br>
                 <small>
-                ・普通の「スウェット」より1000円くらい高いよ。</br>
+                ・普通の「スウェット」より1000円くらい高いよ!</br>
                 ・生地の色は白、紺、黒の3色のみ。</br>
                 ・ビッグが欲しかったら、普通のスウェットでやや大きめサイズを買うのも良いと思う。
                 </small>
