--- a/storesize.html
+++ b/storesize.html
@@ -70,7 +70,7 @@
     </br></br>
         <div class="profile">
             <span style="color:white"><b>
-              ★ビッグシルエットスウェットについて★</b></br></br>
+              ★ビッグシルエットスウェットについて★</b></br>
                 <small>
                 ・普通の「スウェット」より1000円くらい高いよ!</br>
                 ・生地の色は白、紺、黒の3色のみ。</br>
